--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
             <nav>
-                <a href="https://yoplala.tiatia.net/">Portfolio</a>
+                <a href="https://yoplala.github.io/portfolio/">Portfolio</a>
                 <a href="https://yoplala.github.io">Blog</a>
                 <a href="https://yoplala.github.io/about/">À propos</a>
             </nav>
