Open Graph Datas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <meta name="description" content="Un simple portfolio">
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Portfolio">
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://yoplala.github.io/portfolio/">
+    <meta property="og:image" content="https://yoplala.github.io/portfolio/images/Portfolio.png">
+    <meta property="og:description" content="Un simple portfolio">	
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
