--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Portfolio">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://yoplala.github.io/portfolio/">
-    <meta property="og:image" content="https://yoplala.github.io/portfolio/images/Portfolio.png">
+    <meta property="og:image" content="https://yoplala.github.io/portfolio/images/Portfolio.PNG">
     <meta property="og:description" content="Un simple portfolio">	
 
     <link rel="stylesheet" href="style.css">
