--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
         <main>
             <h1>Porfolio</h1>
             <section>
-
+                <div id="LinkedIn-trick">
+                    <img src="images/Portfolio.PNG" alt="Miniature du site">
+                </div>
                 <article>
                     <div>
                         <img src="images/10.Bazil.png" alt="Capture d'écran du site">
