--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta name="description" content="Un simple portfolio">
 
     <!-- Open Graph data -->
-    <meta property="og:title" content="Portfolio">
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://yoplala.github.io/portfolio/">
-    <meta property="og:image" content="https://yoplala.github.io/portfolio/images/Portfolio.PNG">
-    <meta property="og:description" content="Un simple portfolio">	
+    <meta property='og:title' content='Portfolio'/>
+    <meta property='og:type' content='website'/>
+    <meta property='og:url' content='//yoplala.github.io/portfolio/'/>
+    <meta property='og:image' content='//yoplala.github.io/portfolio/images/Portfolio.PNG'/>
+    <meta property='og:description' content='Un simple portfolio'/>	
 
     <link rel="stylesheet" href="style.css">
 </head>
@@ -37,9 +37,6 @@
         <main>
             <h1>Porfolio</h1>
             <section>
-                <div id="LinkedIn-trick">
-                    <img src="images/Portfolio.PNG" alt="Miniature du site">
-                </div>
                 <article>
                     <div>
                         <img src="images/10.Bazil.png" alt="Capture d'écran du site">
